--- a/index.html
+++ b/index.html
@@ -76,14 +76,14 @@
           <div class="form-group col-6">
             <label for="fullName">Name:</label>
             <input type="text" class="form-control" placeholder="Enter Full Name" id="fullName">
-          </div>
-          <div class="form-group col-6">
-            <label for="city">Current City:</label>
-            <input type="text" class="form-control" placeholder="Enter City" id="city">
-          </div>
+          </div>          
           <div class="form-group col-6">
             <label for="email">Email address:</label>
             <input type="email" class="form-control" placeholder="Enter email" id="email">
+          </div>
+           <div class="form-group col-6">
+            <label for="city">Current City/State:</label>
+            <input type="text" class="form-control" placeholder="Enter City" id="city">
           </div>
           <div class="form-group col-6">
             <label for="employment">Most recent employer:</label>
