--- a/index.html
+++ b/index.html
@@ -86,6 +86,10 @@
             <input type="text" class="form-control" placeholder="Enter City" id="city">
           </div>
           <div class="form-group col-6">
+            <label for="state">Current State:</label>
+            <input type="text" class="form-control" placeholder="Enter State" id="city">
+          </div>
+          <div class="form-group col-12">
             <label for="employment">Most recent employer:</label>
             <input type="text" class="form-control" placeholder="Enter most recent employment" id="employment">
           </div>
